--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~10.0.11",
     "@angular/platform-browser-dynamic": "~10.0.11",
     "@angular/router": "~10.0.11",
+    "csv-parser": "^3.0.0",
     "node-fetch": "^2.6.1",
+    "nyc": "^15.1.0",
     "rxjs": "~6.5.5",
     "ts-proto": "^1.68.0",
     "tslib": "^2.0.0",
